[package]
name = "vcfkit"
version = "0.1.1"
edition = "2021"
authors = ["sharkLoc <dwood8146@gmail.com>"]
rust-version = "1.71.0"
homepage = "https://github.com/sharkLoc/vcfkit"
description = "vcfkit: a simple program for vcf/bcf file manipulation"
keywords = ["vcf", "snp","bio", "hts"]
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.41.1"
flate2 = "1.0.24"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
anyhow = "1.0.70"
